# libusbp

./: CMakeLists.txt
bindings/: bindings.cpp
bindings/examples/: lsport.py
